--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,14 @@ spring.messages.encoding=UTF-8
 #\u65E5\u5FD7\u914D\u7F6E\u6587\u4EF6
 logging.file=/home/sang/workspace/log.log
 logging.level.org.springframework.web=debug
+#\u90E8\u7F72\u4E0D\u540C\u7684\u73AF\u5883
+spring.profiles.active=dev
+#\u6570\u636E\u5E93
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/demo
+spring.datasource.username=root
+spring.datasource.password=yechao
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.max-idle=10
+spring.datasource.max-wait=10000
+spring.datasource.min-idle=5
+spring.datasource.initial-size=5
