1.新增数据源：多个数据源配置 2.基于springboot分页插件实现 3.静态分离

--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
         </dependency>
+        <!--设置spring.thymeleaf.mode=LEGACYHTML5必须增加该jar包 -->
+        <dependency>
+            <groupId>net.sourceforge.nekohtml</groupId>
+            <artifactId>nekohtml</artifactId>
+            <version>1.9.22</version>
+        </dependency>
     </dependencies>
 
     <build>
