--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,38 @@
+#test config key and value
 config.name=yechao
 config.age=30
-#\u9632\u6B62\u4E2D\u6587\u4E71\u7801\u914D\u7F6E\u6587\u4EF6
+
+#config of tomcat
 server.tomcat.uri-encoding=UTF-8
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 spring.http.encoding.force=true
 spring.messages.encoding=UTF-8
-#\u65E5\u5FD7\u914D\u7F6E\u6587\u4EF6
+
+#config of logging
 logging.file=/home/sang/workspace/log.log
 logging.level.org.springframework.web=debug
 #\u90E8\u7F72\u4E0D\u540C\u7684\u73AF\u5883
 spring.profiles.active=dev
 #\u6570\u636E\u5E93
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/demo
-spring.datasource.username=root
-spring.datasource.password=yechao
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.max-idle=10
-spring.datasource.max-wait=10000
-spring.datasource.min-idle=5
-spring.datasource.initial-size=5
+
+#database config
+#first database
+spring.datasource.demo.url=jdbc:mysql://127.0.0.1:3306/demo
+spring.datasource.demo.username=root
+spring.datasource.demo.password=yechao
+spring.datasource.demo.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.demo.max-idle=10
+spring.datasource.demo.max-wait=10000
+spring.datasource.demo.min-idle=5
+spring.datasource.demo.initial-size=5
+#second database
+spring.datasource.apitest.url=jdbc:mysql://localhost:3306/api
+spring.datasource.apitest.username=root
+spring.datasource.apitest.password=yechao
+spring.datasource.apiitest.driver-class-name=com.mysql.jdbc.Driver
+
+#spring thymeleaf config
 # Enable template caching.
 spring.thymeleaf.cache=false
 # Check that the templates location exists.
@@ -32,8 +45,8 @@ spring.thymeleaf.enabled=true
 spring.thymeleaf.encoding=UTF-8
 # Comma-separated list of view names that should be excluded from resolution.
 spring.thymeleaf.excluded-view-names=
-# Template mode to be applied to templates. See also StandardTemplateModeHandlers.
-spring.thymeleaf.mode=HTML5
+# Template mode to be applied to templates. See also StandardTemplateModeHandlers.if html5£¬html documnet must have /£¬or it will fail
+spring.thymeleaf.mode=LEGACYHTML5
 # Prefix that gets prepended to view names when building a URL.
 spring.thymeleaf.prefix=classpath:/templates/
 # Suffix that gets appended to view names when building a URL.
