--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,6 @@
     <artifactId>demo</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
-
     <name>demo</name>
     <description>Demo project for Spring Boot</description>
 
@@ -56,7 +55,7 @@
             <artifactId>testng</artifactId>
             <version>6.8.8</version>
         </dependency>
-        <!--springboot 热部署插件-->
+        <!--springboot 热部署插件,springboot 1.3开始支持-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
@@ -79,7 +78,6 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.46</version>
         </dependency>
-
     </dependencies>
     <profiles>
         <!--dev env-->
