--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,12 @@
 #test config key and value
 config.name=yechao
 config.age=30
-
 #config of tomcat
 server.tomcat.uri-encoding=UTF-8
 spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true
 spring.http.encoding.force=true
 spring.messages.encoding=UTF-8
-
 #config of logging
 logging.file=/home/sang/workspace/log.log
 logging.level.org.springframework.web=error
@@ -17,7 +15,6 @@ logging.level.root=info
 #\u90E8\u7F72\u4E0D\u540C\u7684\u73AF\u5883
 spring.profiles.active=dev
 #\u6570\u636E\u5E93
-
 #database config
 #first database
 spring.datasource.demo.url=jdbc:mysql://127.0.0.1:3306/demo
@@ -33,7 +30,6 @@ spring.datasource.apitest.url=jdbc:mysql://localhost:3306/api
 spring.datasource.apitest.username=root
 spring.datasource.apitest.password=yechao
 spring.datasource.apiitest.driver-class-name=com.mysql.jdbc.Driver
-
 #spring thymeleaf config
 # Enable template caching.
 spring.thymeleaf.cache=false
@@ -54,7 +50,6 @@ spring.thymeleaf.prefix=classpath:/templates/
 # Suffix that gets appended to view names when building a URL.
 spring.thymeleaf.suffix=.html
 #spring.thymeleaf.template-resolver-order=# Order of the template resolver in the chain. spring.thymeleaf.view-names= # Comma-separated list of view names that can be resolved.
-
 spring.freemarker.charset=UTF-8
 spring.freemarker.cache=false
 spring.freemarker.allow-request-override=false
@@ -69,3 +64,23 @@ spring.freemarker.expose-spring-macro-helpers=false
 spring.freemarker.suffix=.ftl
 spring.freemarker.template-loader-path=classpath:/templates/
 #spring.freemarker.view-names=
+
+#the config of redis
+# Redis数据库索引（默认为0）
+spring.redis.database=0
+# Redis服务器地址
+spring.redis.host=127.0.0.1
+# Redis服务器连接端口
+spring.redis.port=6379
+# Redis服务器连接密码（默认为空）
+spring.redis.password=yechao
+# 连接池最大连接数（使用负值表示没有限制）
+spring.redis.pool.max-active=8
+# 连接池最大阻塞等待时间（使用负值表示没有限制）
+spring.redis.pool.max-wait=-1
+# 连接池中的最大空闲连接
+spring.redis.pool.max-idle=8
+# 连接池中的最小空闲连接
+spring.redis.pool.min-idle=0
+# 连接超时时间（毫秒）
+spring.redis.timeout=0
