--- a/pom.xml
+++ b/pom.xml
@@ -96,13 +96,11 @@
             <artifactId>openrtb-core</artifactId>
             <version>0.9.8</version>
         </dependency>
-        <!--protobuf java-->
-        <!--<dependency>-->
-        <!--<groupId>com.google.protobuf</groupId>-->
-        <!--<artifactId>protobuf-java</artifactId>-->
-        <!--<version>2.6.1</version>-->
-        <!--</dependency>-->
-        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+        <dependency>
+            <groupId>commons-cli</groupId>
+            <artifactId>commons-cli</artifactId>
+            <version>1.4</version>
+        </dependency>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -112,8 +110,8 @@
             <groupId>com.youdao</groupId>
             <artifactId>yex-tool</artifactId>
             <version>1.0.0</version>
-            <scope>system</scope>
             <systemPath>${basedir}/lib/yex-tool-1.0.0.jar</systemPath>
+            <scope>system</scope>
         </dependency>
     </dependencies>
     <profiles>
@@ -129,22 +127,14 @@
 
     <build>
         <finalName>SpringBootDemo</finalName>
-        <!--<filters>-->
-        <!--<filter>../src/main/filters/{env}-application.properties</filter>-->
-        <!--<filter>../src/main/filters/{env}-application.properties</filter>-->
-        <!--</filters>-->
-        <!--<resources>-->
-        <!--<resource>-->
-        <!--<directory></directory>-->
-        <!--<filtering>false</filtering>-->
-        <!--</resource>-->
-        <!--</resources>-->
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <fork>true</fork>
+                    <!--<fork>true</fork>-->   <!--//热部署开启配置 -->
+                    <executable>true</executable>
+                    <!--生成可执行的jar包，在linux下可以自行./XXX.jar启动服务-->
                 </configuration>
             </plugin>
             <plugin>
