--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.messages.encoding=UTF-8
 logging.file=/home/sang/workspace/log.log
 logging.level.org.springframework.web=error
 #total level of logging
-logging.level.root=info
+logging.level.root=error
 #\u90E8\u7F72\u4E0D\u540C\u7684\u73AF\u5883
 spring.profiles.active=dev
 #\u6570\u636E\u5E93
