--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,9 @@ spring.http.encoding.force=true
 spring.messages.encoding=UTF-8
 #config of logging
 logging.file=/home/sang/workspace/log.log
-logging.level.org.springframework.web=error
+logging.level.org.springframework.web=info
 #total level of logging
-logging.level.root=error
+logging.level.root=info
 #\u90E8\u7F72\u4E0D\u540C\u7684\u73AF\u5883
 spring.profiles.active=dev
 #\u6570\u636E\u5E93
